Interaction with API configured

--- a/front/.env
+++ b/front/.env
@@ -1,1 +1,2 @@
-REACT_APP_API_URL='http://localhost:8000/'
+REACT_APP_API_URL='http://82.97.249.240:82'
+REACT_APP_AUTH_TOKEN='31620f51972845091649802035b423d1'
