--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Start containers
-      run: docker-compose -f "docker-compose.yaml" up -d --build
+      run: docker-compose -f "./BACK/docker-compose.yaml" up -d --build
       env:
         POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
         POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
