--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,3 +20,11 @@ jobs:
         POSTGRES_DB: ${{ secrets.POSTGRES_DB }}
         POSTGRES_CONNECTION_STRING: postgresql+psycopg2://${POSTGRES_USER}:${POSTGRES_PASSWORD}@82.97.249.240:5432/${POSTGRES_DB}
         API_TOKEN: ${{ secrets.API_TOKEN }}
+
+    - name: Setup Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.12'
+
+    - name: Install test dependencies
+      run: pip install -r BACK/simple_tests/requirements.txt
