--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
       run: pip install -r ./BACK/simple_tests/requirements.txt
 
     - name: Run tests
-      run: pytest ./BACK/simple_tests/Test.py
+      run: pytest ./BACK/simple_tests/test.py
       env:
         API_URL: http://localhost:82
         API_TOKEN: ${{ secrets.API_TOKEN }}
