--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,10 +27,10 @@ jobs:
         python-version: '3.12'
 
     - name: Install test dependencies
-      run: pip install -r ./BACK/simple_tests/requirements.txt
+      run: pip install -r BACK/simple_tests/requirements.txt
 
     - name: Run tests
-      run: pytest ./BACK/simple_tests/test_api.py
+      run: pytest BACK/simple_tests/test_api.py
       env:
         API_URL: http://localhost:82
         API_TOKEN: ${{ secrets.API_TOKEN }}
