--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,5 +32,5 @@ jobs:
     - name: Run tests
       run: pytest simple_tests/test_api.py
       env:
-        API_URL: http://localhost:82
+        API_URL: http://localhost
         API_TOKEN: ${{ secrets.API_TOKEN }}
