--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
         POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
         POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
         POSTGRES_DB: ${{ secrets.POSTGRES_DB }}
-        POSTGRES_CONNECTION_STRING: postgresql+psycopg2://${{ secrets.POSTGRES_USER }}:${{ secrets.POSTGRES_PASSWORD }}@host.docker.internal:5432/${{ secrets.POSTGRES_DB }}
+        POSTGRES_CONNECTION_STRING: postgresql+psycopg2://${POSTGRES_USER}:${POSTGRES_PASSWORD}@82.97.249.240:5432/${POSTGRES_DB}
         API_TOKEN: ${{ secrets.API_TOKEN }}
 
     - name: Setup Python
